# personfromvid

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  batch.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: architecture.md  refactoring_processing_context.md  refactoring_processing_context_tasks.md
docs/dev/: MULTI_PERSON_SYSTEM_SPECIFICATION.md  REFACTORING_MULTI_PERSON.md  architecture.md  code_quality.md  frame_selection_enhancement_plan.md  publishing.md
docs/releases/: v1.2.0.md  v1.3.0.md  v1.4.0.md
docs/specifications/: face_restoration_specification.md  multibody_frames_specification.md  plan_face_restoration_implementation.md  plan_square_crops_implementation.md  plan_variable_aspect_ratio_crops_implementation.md  square_crops_specification.md  variable_aspect_ratio_crops_specification.md
personfromvid/: __init__.py  __main__.py  cli.py
personfromvid/analysis/: __init__.py  closeup_detector.py  frame_selector.py  head_angle_classifier.py  person_selector.py  pose_classifier.py  quality_assessor.py
personfromvid/core/: __init__.py  frame_extractor.py  pipeline.py  state_manager.py  temp_manager.py  video_processor.py
personfromvid/core/steps/: __init__.py  base.py  closeup_detection.py  face_detection.py  frame_extraction.py  frame_selection.py  initialization.py  output_generation.py  person_building.py  person_selection.py  pose_analysis.py  quality_assessment.py
personfromvid/data/: __init__.py  config.py  constants.py  context.py  detection_results.py  frame_data.py  person.py  pipeline_state.py
personfromvid/models/: __init__.py  face_detector.py  face_restorer.py  head_pose_estimator.py  model_configs.py  model_manager.py  model_utils.py  pose_estimator.py  pytorch_compat.py
personfromvid/output/: __init__.py  crop_utils.py  image_processor.py  image_writer.py  naming_convention.py
personfromvid/utils/: exceptions.py  formatting.py  logging.py  output_formatter.py  progress.py  validation.py
scripts/: clean.py  clean.sh
tests/: models_tests_README.md
tests/integration/: test_face_restoration_integration.py  test_fixed_ratio_crop_integration.py  test_model_integration.py  test_person_pipeline_integration.py
tests/unit/: test_closeup_detector.py  test_config.py  test_crop_utils.py  test_data_models.py  test_face_detector.py  test_face_restorer.py  test_frame_extractor.py  test_frame_selector.py  test_head_angle_classifier.py  test_head_pose_estimator.py  test_image_processor.py  test_model_management.py  test_model_utils.py  test_output.py  test_person_builder.py  test_person_building_step.py  test_person_model.py  test_person_selection_step.py  test_person_selector.py  test_pipeline.py  test_pose_classifier.py  test_pose_estimator.py  test_processing_context.py  test_progress.py  test_quality_assessment_step.py  test_quality_assessor.py  test_state_manager.py  test_temp_manager.py  test_validation.py  test_video_processor.py
