[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personfromvid"
version = "1.4.1"
description = "Extract and categorize high-quality frames containing people in specific poses from video files"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "codeprimate"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    # Core libraries
    "opencv-python>=4.8.0",
    "ffmpeg-python>=0.2.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0,<3",
    # AI/ML libraries
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnxruntime>=1.16.0",
    "ultralytics>=8.0.0",
    "safetensors>=0.4.0",
    "gfpgan>=1.3.8",
    # CLI and progress
    "click>=8.1.0",
    "rich>=13.0.0",
    # Data handling
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "tomli>=2.0.1; python_version<'3.11'",
    # Utilities
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "build>=1.2.0",
    "twine>=6.0.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
    "types-PyYAML>=6.0.0",
]
gpu = [
    "onnxruntime-gpu>=1.15.0",
]

[project.scripts]
personfromvid = "personfromvid.cli:main"

[project.urls]
Homepage = "https://github.com/codeprimate/personfromvid"
Documentation = "https://github.com/codeprimate/personfromvid/docs"
Repository = "https://github.com/codeprimate/personfromvid"
Issues = "https://github.com/codeprimate/personfromvid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["personfromvid*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=personfromvid --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",   # line length handled by black
    "TID252", # keep relative imports in package
    "UP006",  # List/Dict/Tuple in annotations acceptable
    "UP007",  # Optional[X] acceptable
    "UP035",  # Dict/List/Tuple from typing acceptable
    # Optional: enable incrementally for style modernization
    "PTH",    # Path.open() / pathlib (many call sites)
    "SIM",    # simplify (nested if, return directly, etc.)
    "UP008",  # super() style
    "UP015",  # open mode params
    "UP024",  # OSError aliases
    "UP037",  # quoted type annotations
    "UP038",  # isinstance(X | Y)
    "N806",   # variable naming in function
    "N812",   # import alias naming
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "N806", "SIM117"]  # assert; mock names; nested with